@@ -2,10 +2,19 @@ body
 {
     overflow: hidden;
 }
+#tplbartt
+{
+    width: 450px;
+}
 #tplbaropt
 {
     float: right;
     font-size: 0.9em;
+}
+#tplbaropt img
+{
+    margin-bottom: -3px;
+    margin-right: -5px;
 }
 #tplbarclr
 {
@@ -248,6 +257,33 @@ input.navbtn /* for ie browsers */
     padding: 10px;
     color: white;
 }
+#midmenu h1 img
+{
+    margin-bottom: -3px;
+}
+#chaddct
+{
+    position: absolute;
+    background-color: white;
+    padding: 25px;
+    border: 5px solid gray;
+    top: 175px;
+    left: 10px;
+    text-align: left;
+}
+#chaddct small
+{
+    font-size: 0.7em;
+    color: gray;
+}
+#chaddinput
+{
+    width: 200px;
+}
+#chaddct button
+{
+    width: 80px;
+}
 div.chlst
 {
     margin: 0px 0px 10px 10px;
@@ -259,11 +295,28 @@ div.chlst
 }
 div.ch
 {
-    font-size: 0.8em;
-    line-height: 1.7em;
+    font-size: 0.9em;
+    line-height: 20px;
 }
-#chall
+div.chf
 {
+    padding: 5px 0px 5px 0px;
+}
+div.chi
+{
+}
+div.ch img
+{
+    width: 16px;
+    height: 16px;
+}
+div.ff img
+{
+    margin-bottom: -1px;
+}
+div.fi img
+{
+    margin-bottom: -3px;
 }
 
 #feeditemblank
