@@ -1364,7 +1364,10 @@ class B_Registry
 
         foreach($a as $i)
         {
-            if(strlen($i)==0) throw new B_Exception('invalid path', E_WARNING);
+            if(strlen($i)==0)
+            {
+                throw new B_Exception(sprintf('invalid path (%s)', $path), E_WARNING);
+            }
             if(!isset($r->{$i})) $r->{$i} = new self();
             $r = $r->{$i};
         }
@@ -1385,7 +1388,10 @@ class B_Registry
 
         foreach($a as $i)
         {
-            if(strlen($i)==0) throw new B_Exception('invalid path', E_WARNING);
+            if(strlen($i)==0 || !is_object($r))
+            {
+                throw new B_Exception(sprintf('invalid path (%s)', $path), E_WARNING);
+            }
             $r = $r->{$i};
         }
 
